tests/neg/i22660.scala
trait Equatable[T]
type Foo[T: Equatable] // error
